--- a/index.html
+++ b/index.html
@@ -373,12 +373,12 @@
             // 4. Copy the config object (apiKey, authDomain, etc.) and paste it below
             
             const firebaseConfig = {
-                // apiKey: "YOUR_API_KEY",
-                // authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-                // projectId: "YOUR_PROJECT_ID",
-                // storageBucket: "YOUR_PROJECT_ID.appspot.com",
-                // messagingSenderId: "...",
-                // appId: "..."
+                apiKey: "AIzaSyCb5KsO4HYmYcYE34hRDpfctjsFrahEheE",
+                authDomain: "jasmine-workout-app.firebaseapp.com",
+                projectId: "jasmine-workout-app",
+                storageBucket: "jasmine-workout-app.firebasestorage.app",
+                messagingSenderId: "123351449647",
+                appId: "1:123351449647:web:63d76d64052893838546da"
             };
 
             // ----------------------------------------------------
